--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -20,15 +20,17 @@ The class notes editor is a fully featured rich text editor, allowing you to hig
 
 ![Classroom](/images/classroom-tutoros.png)
 
-### Lesson Info
-
-This section provides basic information about the lesson, including the student’s name and the lesson time.
+You can read more about our class notes editor features [here](/lessons/classroom#class-notes-editor-features).
 
 ### Resource
 
 The resource uploaded for this lesson. This can be a PDF file, a .docx file, or a Google Drive link. For example, it could be an article, a sample math paper, etc.
 
 ![Classroom](/images/classroom-resource.png)
+
+### Lesson Info
+
+This section provides basic information about the lesson, including the student’s name and the lesson time.
 
 ### Student Notes
 
