--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -30,7 +30,9 @@ The resource uploaded for this lesson. This can be a PDF file, a .docx file, or 
 
 ### Lesson Info
 
-This section provides basic information about the lesson, including the student’s name and the lesson time.
+This section provides basic information about the lesson, including the student’s name, lesson time and lesson template name.
+
+![Classroom](/images/classroom-lesson-info.png)
 
 ### Student Notes
 
