--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -14,7 +14,7 @@ Each section of the classroom is described below.
 
 ### Class Notes Editor
 
-This is the editor where you can take notes throughout the lesson. The student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
+This is the editor where you can take notes throughout the lesson. The editor is interactive as the student also has access to the classroom, allowing them to see the notes you add in real time and contribute their own notes as well.
 
 The class notes editor is a fully featured rich text editor, allowing you to highlight text, apply formatting, create lists & tables, upload images & files, add math equations, among other options.
 
