--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -24,7 +24,7 @@ You can read more about our class notes editor features [here](/lessons/classroo
 
 ### Resource
 
-The resource uploaded for this lesson. This can be a PDF file, a .docx file, or a Google Drive link. For example, it could be an article, a sample math paper, etc.
+The resource uploaded for this lesson. This can be a PDF file or a Word doc. For example, it could be an article, a sample math paper, etc.
 
 ![Classroom](/images/classroom-resource.png)
 
