--- a/lessons/viewing-lessons.mdx
+++ b/lessons/viewing-lessons.mdx
@@ -13,3 +13,13 @@ To view your upcoming and previous lessons, go to the [Lessons](https://platform
 Your upcoming lessons are also displayed on your [Dashboard](https://platform.tutoros.app/home):
 
 ![Viewing Lessons 2](/images/viewing-lessons-2.png)
+
+### Adding Resources
+
+A Lesson Resource is an optional document that you can add it an upcoming lesson. It will then be displayed in the [classroom](/lessons/classroom) so you can easily read through it with the student during the lesson.
+
+Lesson Resources can either be a PDF file or a Word doc, e.g. an article, a sample math paper, etc.
+
+To add a resource to an upcoming lesson, click the Upload link in the lesson box:
+
+![Viewing Lessons 3](/images/viewing-lessons-1.png)
