--- a/profile/editing-profile.mdx
+++ b/profile/editing-profile.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ## Editing Profile
 
-To edit your profile image and and bio, click on your name on the top right of the toolbar and then click `Profile` in the dropdown:
+To edit your profile image and and bio, click the `Profile` link in the toolbar:
 
 ![Edit Profile 1](/images/edit-profile-1.png)
 
