--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -10,7 +10,7 @@ Your profile page serves as a unique landing page where students can view your d
 
 ### Viewing & Sharing Profile Page
 
-To view your page, click on your name on the top right of the toolbar and then click `My Link` in the dropdown:
+To view your page, click the `My Link` link in the toolbar:
 
 ![Profile Page 1](/images/profile-page-1.png)
 
