--- a/lessons/viewing-lessons.mdx
+++ b/lessons/viewing-lessons.mdx
@@ -23,3 +23,7 @@ Lesson Resources can either be a PDF file or a Word doc, e.g. an article, a samp
 To add a resource to an upcoming lesson, click the Upload link in the lesson box:
 
 ![Viewing Lessons 3](/images/viewing-lessons-3.png)
+
+Once the resource is uploaded, it will be visible in the lesson box:
+
+![Viewing Lessons 4](/images/viewing-lessons-4.png)
