--- a/schedule/viewing-events.mdx
+++ b/schedule/viewing-events.mdx
@@ -14,4 +14,4 @@ You can then view the lesson details by clicking on the event:
 
 ![Lesson Event 2](/images/lesson-event-2.png)
 
-**Note** that when a lesson is booked, the lesson time is reserved in your calendar and no other lessons can be booked for that same time.
+<Note>When a lesson is booked, the lesson time is reserved in your calendar and no other lessons can be booked for that same time.</Note>
