--- a/templates/manage-templates.mdx
+++ b/templates/manage-templates.mdx
@@ -24,4 +24,6 @@ To archive a template, click on the `Archive template` link. Archiving a templat
 
 ### Delete Template
 
-To delete a template, click on the `Delete template` link. **Note** that templates with previously booked lessons can only be archived but not deleted.
+To delete a template, click on the `Delete template` link.
+
+<Note>Templates with previously booked lessons can only be archived but not deleted. </Note>
