--- a/lessons/joining-lesson.mdx
+++ b/lessons/joining-lesson.mdx
@@ -12,4 +12,4 @@ Once the time is 5 minutes or less before a lesson start time, you can join the 
 
 You will be directed to the [classroom](/lessons/classroom) screen for the lesson and the Zoom call for the lesson will automatically open.
 
-<Note>You to be logged into Zoom with the same email address as your TutorOS account. See the [Zoom Account](/faq/zoom-account) page for more details.</Note>
+<Note>To join the Zoom call for the lesson, you need to be logged into Zoom with the same email address as your TutorOS account. See the [Zoom Account](/faq/zoom-account) page for more details.</Note>
