--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -6,20 +6,22 @@ icon: 'text-size'
 
 ### How to cancel a lesson
 
-To cancel an upcoming lesson, click the ellipsis (three dots) on the top right of the box for the lesson you want to cancel:
+Both you and the student can cancel a lesson. The process to cancel a lesson is described below and is the same for both you and the student.
+
+**1.** Click the ellipsis (three dots) on the top right of the box for the lesson you want to cancel:
 
 ![Cancel Lesson 1](/images/cancel-lesson-1.png)
 
-Then click the Cancel option that appears:
+**2.** Then click the Cancel option that appears:
 
 ![Cancel Lesson 2](/images/cancel-lesson-2.png)
 
-You will then see a final confirmation pop-up to confirm whether or not to cancel the lesson:
+**3.** You will then see a final confirmation pop-up to confirm whether or not to cancel the lesson:
 
 ![Cancel Lesson 3](/images/cancel-lesson-4.png)
 
 Once the lesson is cancelled, a Cancelled status will be displayed beside the lesson in your lesson list:
 
-![Cancel Lesson 4](/images/cancel-lesson-3.png)
+**4.** ![Cancel Lesson 4](/images/cancel-lesson-3.png)
 
 ### Refunds
