--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ### How to cancel a lesson
 
-Both you and the student can cancel a lesson. The process to cancel a lesson is described below and is the same for both you and the student.
+Either you or the student may cancel a lesson. The cancellation process, described below, is the same for both you and the student.
 
 **1.** Click the ellipsis (three dots) on the top right of the box for the lesson you want to cancel:
 
