--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -20,8 +20,8 @@ Either you or the student may cancel a lesson. The cancellation process, describ
 
 ![Cancel Lesson 3](/images/cancel-lesson-4.png)
 
-Once the lesson is cancelled, a Cancelled status will be displayed beside the lesson in your lesson list:
+**4.** Once the lesson is cancelled, a Cancelled status will be displayed beside the lesson in your lesson list:
 
-**4.** ![Cancel Lesson 4](/images/cancel-lesson-3.png)
+![Cancel Lesson 4](/images/cancel-lesson-3.png)
 
 ### Refunds
