--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -4,6 +4,26 @@ description: 'Learn how lesson cancellations work.'
 icon: 'text-size'
 ---
 
+### How lesson cancellations work
+
+**Student Cancellations:**
+
+If the student cancels a lesson, then one of the following will happen, depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and how long before the lesson they cancel:
+
+| **Cancellation Policy** | **Cancellation Window**    | **If Paid At Booking**         | **If Paid After Lesson**     |
+|-------------------------|----------------------------|--------------------------------|------------------------------|
+| **Flexible**            | 24+ hours before session  | Full refund                    | No penalty fee               |
+| **Flexible**            | Less than 24 hours        | 50% refund                    | 50% penalty fee              |
+| **Moderate**            | 48+ hours before session  | Full refund                    | No penalty fee               |
+| **Moderate**            | 24–48 hours before session| 50% refund                    | 50% penalty fee              |
+| **Moderate**            | Less than 24 hours        | No refund                     | Full penalty fee             |
+| **Strict**              | 72+ hours before session  | Full refund                    | No penalty fee               |
+| **Strict**              | Less than 72 hours        | No refund                     | Full penalty fee             |
+
+**Tutor Cancellations:**
+
+If you cancel a lesson, then if the student has already paid, they will be sent a full refund. If they have not already paid, then no payment for the lesson will be due.
+
 ### How to cancel a lesson
 
 Either you or the student may cancel a lesson. The cancellation process, described below, is the same for both you and the student.
@@ -23,5 +43,8 @@ Either you or the student may cancel a lesson. The cancellation process, describ
 **4.** Once the lesson is cancelled, a Cancelled status will be displayed beside the lesson in your lesson list:
 
 ![Cancel Lesson 4](/images/cancel-lesson-3.png)
+
+**5.** The The lesson will be removed from your schedule, and the time of the lesson will be freed up so another lesson can be booked for that time. 
+Also, If you have connected one or more external calendars, then the lesson event will be removed from each calendar.
 
 ### Refunds
