--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -8,17 +8,14 @@ icon: 'text-size'
 
 **Student Cancellations:**
 
-If the student cancels a lesson, then one of the following will happen, depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and how long before the lesson they cancel:
+If the student cancels a lesson, then depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and when they cancel, one of the following will happen:
 
-| **Cancellation Policy** | **Cancellation Window**    | **If Paid At Booking**         | **If Paid After Lesson**     |
-|-------------------------|----------------------------|--------------------------------|------------------------------|
-| **Flexible**            | 24+ hours before session  | Full refund                    | No penalty fee               |
-| **Flexible**            | Less than 24 hours        | 50% refund                    | 50% penalty fee              |
-| **Moderate**            | 48+ hours before session  | Full refund                    | No penalty fee               |
-| **Moderate**            | 24–48 hours before session| 50% refund                    | 50% penalty fee              |
-| **Moderate**            | Less than 24 hours        | No refund                     | Full penalty fee             |
-| **Strict**              | 72+ hours before session  | Full refund                    | No penalty fee               |
-| **Strict**              | Less than 72 hours        | No refund                     | Full penalty fee             |
+- Issued a full refund.
+- Issued a partial refund.
+- Issued no refund.
+- Sent an email stating that the full lesson payment is now due.
+- Sent an email stating that a partial lesson payment is now due.
+- Sent an email stating that no payment is due.
 
 **Tutor Cancellations:**
 
@@ -44,7 +41,5 @@ Either you or the student may cancel a lesson. The cancellation process, describ
 
 ![Cancel Lesson 4](/images/cancel-lesson-3.png)
 
-**5.** The The lesson will be removed from your schedule, and the time of the lesson will be freed up so another lesson can be booked for that time. 
+**5.** The lesson will then be removed from your schedule, and the time of the lesson will be freed up so another lesson can be booked for that time. 
 Also, If you have connected one or more external calendars, then the lesson event will be removed from each calendar.
-
-### Refunds
