--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -1,12 +1,12 @@
 ---
 title: 'Cancelling Lessons'
-description: 'Learn how lesson cancellations work.'
+description: 'Learn how lesson cancellations work and how to cancel a lesson'
 icon: 'text-size'
 ---
 
-### How lesson cancellations work
+## How lesson cancellations work
 
-**Student Cancellations:**
+### Student Cancellations
 
 If the student cancels a lesson, then depending on the lesson [cancellation policy](/templates/create-new-template#cancellation-policy) and when they cancel, one of the following will happen:
 
@@ -17,11 +17,11 @@ If the student cancels a lesson, then depending on the lesson [cancellation poli
 - Sent an email stating that a partial lesson payment is now due.
 - Sent an email stating that no payment is due.
 
-**Tutor Cancellations:**
+### Tutor Cancellations
 
 If you cancel a lesson, then if the student has already paid, they will be sent a full refund. If they have not already paid, then no payment for the lesson will be due.
 
-### How to cancel a lesson
+## How to cancel a lesson
 
 Either you or the student may cancel a lesson. The cancellation process, described below, is the same for both you and the student.
 
