--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -4,7 +4,7 @@ description: 'Learn how lesson cancellations work and how to cancel a lesson'
 icon: 'text-size'
 ---
 
-## How lesson cancellations work
+## How Lesson Cancellations Work
 
 ### Student Cancellations
 
@@ -21,7 +21,7 @@ If the student cancels a lesson, then depending on the lesson [cancellation poli
 
 If you cancel a lesson, then if the student has already paid, they will be sent a full refund. If they have not already paid, then no payment for the lesson will be due.
 
-## How to cancel a lesson
+## How to Cancel a Lesson
 
 Either you or the student may cancel a lesson. The cancellation process, described below, is the same for both you and the student.
 
