--- a/lessons/cancelling-lessons.mdx
+++ b/lessons/cancelling-lessons.mdx
@@ -13,9 +13,9 @@ If the student cancels a lesson, then depending on the lesson [cancellation poli
 - Issued a full refund.
 - Issued a partial refund.
 - Issued no refund.
-- Sent an email stating that the full lesson payment is now due.
-- Sent an email stating that a partial lesson payment is now due.
-- Sent an email stating that no payment is due.
+- Notified that the full lesson payment is now due.
+- Notified that a partial lesson payment is now due.
+- Notified that no payment is due.
 
 ### Tutor Cancellations
 
