--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -4,7 +4,7 @@ description: 'Learn how to create a new lesson template.'
 icon: 'text-size'
 ---
 
-### How to Create a Lesson Template
+## How to Create a Lesson Template
 
 To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
 
@@ -14,11 +14,22 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template](/images/new-template.png)
 
-### Payment Policy 💳
+### 1. Enter Setup details
+
+xxxx
+
+### 2. Set Price & Duration
+
+zzzz
+
+### 3. Define Policies
+
+
+#### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-### Cancellation Policy 🔁
+#### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
@@ -36,3 +47,7 @@ The cancellation policy defines the terms under which students can cancel lesson
    - **Cancellation Window:** Cancellations allowed up to 72 hours before the session.
    - **Refund:** Full refund if canceled within the allowed window.
    - **Late Cancellation:** No refund if canceled less than 72 hours before the session.
+
+#### First Lesson Discount
+
+xxx
