--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -14,22 +14,22 @@ You will then be brought to the New Lesson Template screen, where you can set th
 
 ![New Lesson Template](/images/new-template.png)
 
-### 1. Enter Setup details
+## 1. Enter Setup details
 
 xxxx
 
-### 2. Set Price & Duration
+## 2. Set Price & Duration
 
 zzzz
 
-### 3. Define Policies
+## 3. Define Policies
 
 
-#### Payment Policy 💳
+### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-#### Cancellation Policy 🔁
+### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
@@ -48,6 +48,6 @@ The cancellation policy defines the terms under which students can cancel lesson
    - **Refund:** Full refund if canceled within the allowed window.
    - **Late Cancellation:** No refund if canceled less than 72 hours before the session.
 
-#### First Lesson Discount
+### First Lesson Discount
 
 xxx
