--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -8,28 +8,51 @@ icon: 'text-size'
 
 To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
 
-![Create New Lesson Template](/images/create-new-template.png)
+You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy, cancellation policy, etc. for this new template.
 
-You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy and cancellation policy for this new template:
+### 1. Enter Setup details
 
-![New Lesson Template](/images/new-template.png)
+![New Lesson Template 1](/images/new-template-1.png)
 
-## 1. Enter Setup details
+The first step is to set the name, category, and language of instruction for this template.
 
-xxxx
+The category options are:
 
-## 2. Set Price & Duration
+- Language Learning
+- Maths
+- Science
+- Music
 
-zzzz
+The language of instruction is the language in which the lessons will be conducted. For example, if you are teaching Spanish and delivering the lessons in English, select English. 
 
-## 3. Define Policies
+### 2. Set Price & Duration
 
+![New Lesson Template 2](/images/new-template-2.png)
 
-### Payment Policy 💳
+The second step is to set the price and duration for this template.
+
+The price is how much the student needs to pay for a lessons from this template.
+
+The duration is how long each lesson lasts. The duration options are:
+
+- 30 minutes.
+- 40 minutes.
+- 45 minutes.
+- 60 minutes.
+- 90 minutes.
+- 120 minutes.
+
+### 3. Define Policies
+
+![New Lesson Template 3](/images/new-template-3.png)
+
+The final step is define the policies for this template.
+
+#### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-### Cancellation Policy 🔁
+#### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
@@ -48,6 +71,6 @@ The cancellation policy defines the terms under which students can cancel lesson
    - **Refund:** Full refund if canceled within the allowed window.
    - **Late Cancellation:** No refund if canceled less than 72 hours before the session.
 
-### First Lesson Discount
+#### First Lesson Discount 1️⃣
 
 xxx
