--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -8,6 +8,8 @@ icon: 'text-size'
 
 To create a new lesson template, go to the [Templates](https://platform.tutoros.app/lesson-templates) section in the app, and click the `New Lesson Template` button:
 
+![Create New Lesson Template](/images/create-new-template.png)
+
 You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy, cancellation policy, etc. for this new template.
 
 ### 1. Enter Setup details
