--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -12,7 +12,7 @@ To create a new lesson template, go to the [Templates](https://platform.tutoros.
 
 You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy, cancellation policy, etc. for this new template.
 
-### 1. Enter Setup details
+## 1. Enter Setup details
 
 ![New Lesson Template 1](/images/new-template-1.png)
 
@@ -27,13 +27,13 @@ The category options are:
 
 The language of instruction is the language in which the lessons will be conducted. For example, if you are teaching Spanish and delivering the lessons in English, select English. 
 
-### 2. Set Price & Duration
+## 2. Set Price & Duration
 
 ![New Lesson Template 2](/images/new-template-2.png)
 
 The second step is to set the price and duration for this template.
 
-The price is how much the student needs to pay for a lessons from this template.
+The price is how much the student needs to pay for a lesson from this template.
 
 The duration is how long each lesson lasts. The duration options are:
 
@@ -44,17 +44,17 @@ The duration is how long each lesson lasts. The duration options are:
 - 90 minutes.
 - 120 minutes.
 
-### 3. Define Policies
+## 3. Define Policies
 
 ![New Lesson Template 3](/images/new-template-3.png)
 
 The final step is define the policies for this template.
 
-#### Payment Policy 💳
+### Payment Policy 💳
 
 Please see the [Lesson Payments Intro](/payments/payments-intro) section for more details on the payment policy options.
 
-#### Cancellation Policy 🔁
+### Cancellation Policy 🔁
 
 The cancellation policy defines the terms under which students can cancel lessons. There are three options:
 
@@ -73,6 +73,6 @@ The cancellation policy defines the terms under which students can cancel lesson
    - **Refund:** Full refund if canceled within the allowed window.
    - **Late Cancellation:** No refund if canceled less than 72 hours before the session.
 
-#### First Lesson Discount 1️⃣
+### First Lesson Discount 1️⃣
 
 xxx
