--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -12,7 +12,7 @@ To create a new lesson template, go to the [Templates](https://platform.tutoros.
 
 You will then be brought to the New Lesson Template screen, where you can set the name, category, price, duration, payment policy, cancellation policy, etc. for this new template.
 
-## 1. Enter Setup details
+## 1. Enter Setup Details
 
 ![New Lesson Template 1](/images/new-template-1.png)
 
@@ -75,4 +75,14 @@ The cancellation policy defines the terms under which students can cancel lesson
 
 ### First Lesson Discount 1️⃣
 
-xxx
+If you want to offer the first lesson for this template at a discount for each new student, you can enter the discount percentage in this field.
+
+Set the discount to 0 for no discount, 100 for a free lesson, or 50 for half off, and so on.
+
+If you have existing students who should not receive a discount on their first lesson, please click the `Upload discount exclusion list` link and upload a .txt file containing each student's email addresses on a new line. Here is an example file:
+
+```plaintext title="example.txt"
+amy@example.com
+john.smith@example.com
+sarah.wilson123@example.com
+```
