--- a/templates/create-new-template.mdx
+++ b/templates/create-new-template.mdx
@@ -81,7 +81,7 @@ Set the discount to 0 for no discount, 100 for a free lesson, or 50 for half off
 
 If you have existing students who should not receive a discount on their first lesson, please click the `Upload discount exclusion list` link and upload a .txt file containing each student's email addresses on a new line. Here is an example file:
 
-```plaintext title="example-exclusion-list.txt"
+```plaintext example-exclusion-list.txt
 amy@example.com
 john.smith@example.com
 sarah.wilson123@example.com
