--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -92,6 +92,28 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 | Increase list item indent | `⇥`         | `⇥`          |
 | Decrease list item indent | `Shift+⇥`   | `⇧⇥`         |
 
+## Whiteboard Features
+
+### Keyboard Shortcuts
+
+Our whiteboard supports various keyboard shortcuts to help you use it easily. Below is a list of the supported shortcuts:
+
+| Action                    | Shortcut              |
+|---------------------------|-------------          |
+| Select Clicker Tool	    | `C`                   |
+| Select Hand Tool	        | `H`                   |
+| Select Selector Tool	    | `S`                   |
+| Select Pencil Tool	    | `P`                   |
+| Select Erasor Tool	    | `E`                   |
+| Select Text Tool	        | `T`                   |
+| Select Rectangle Shape	| `R`                   |
+| Select Ellipse Shape      | `O`                   |
+| Select Line	            | `L`                   |
+| Select Arrow	            | `A`                   |
+| Undo	                    | `Ctrl + Z`/`Cmd + Z`  |
+| Redo	                    | `Ctrl + Y`/`Cmd + Y`  |
+| Exit Full Screen	        | `Esc`                 |
+
 ## Best Practices
 
-Once the lesson concludes and you leave the classroom, the class notes will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended) and before you exit the classroom.
+Once the lesson concludes and you leave the classroom, the class notes and whiteboard will be locked and cannot be edited further. Therefore, we recommend making any final adjustments or cleanups at the end of the lesson (after the Zoom session has ended) and before you exit the classroom.
