--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -32,7 +32,7 @@ The summary is broken into the following sections:
 6. Homework or Follow-Up Assignments
 7. Next Steps
 
-<Note>Only the Lesson Overview, Topics Covered and Vocabulary and Sentence Examples (if applicable) sections are included in the summary shown to students.</Note>
+<Note>In the summary shown to students, only the Lesson Overview, Topics Covered and Vocabulary and Sentence Examples (if applicable) sections are included.</Note>
 
 ### Transcript
 
