--- a/payments/payouts.mdx
+++ b/payments/payouts.mdx
@@ -6,7 +6,7 @@ icon: 'text-size'
 
 ### How Payouts Work
 
-For lessons payments that are made inside TutorOS, your balance will accumulate and is paid out (i.e. transferred to your connected bank account) daily for UK and EU bank accounts and every Wednesday for accounts in all other countries.
+For lessons payments that are made inside TutorOS, your balance will accumulate and is paid out (i.e. transferred to your connected bank account) daily for UK & EU bank accounts and every Wednesday for accounts in all other countries.
 
 ### Viewing Payouts
 
