--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -22,6 +22,16 @@ The class notes editor is a fully featured rich text editor, allowing you to hig
 
 You can read more about our class notes editor features [here](/lessons/classroom#class-notes-editor-features).
 
+### Whiteboard
+
+The whiteboard is a collaborative canvas where you can create drawings throughout the lesson. Just like the class notes editor, it’s interactive—students can see your drawings in real time and contribute their own.
+
+The whiteboard lets you draw freehand, add sticky notes, illustrate concepts with shapes and connectors, and more.
+
+![Classroom](/images/classroom-tutoros.png)
+
+You can read more about our whiteboard features [here](/lessons/classroom#whiteboard-features).
+
 ### Resource
 
 The resource uploaded for this lesson. This can be a PDF file or a Word doc. For example, it could be an article, a sample math paper, etc.
