--- a/lessons/post-lesson-classroom.mdx
+++ b/lessons/post-lesson-classroom.mdx
@@ -32,7 +32,7 @@ The summary is broken into the following sections:
 
 1. Lesson Overview
 2. Topics Covered
-3. Vocabulary and Sentence Examples (only applicable for lessons where the category is Language Learning)
+3. Vocabulary and Sentence Examples (only applicable for lessons where the category is `Language Learning`)
 4. Student Progress and Achievements
 5. Areas for Improvement
 6. Homework or Follow-Up Assignments
