--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -14,7 +14,10 @@ The email will contain a link to the feedback form. You can also access the feed
 
 ![Give Feedback 2](/images/give-feedback-2.png)
 
-The Feedback screen contains the feeback form, consisting of two questions - `What did the student do well?` and `How can the student continue to improve?`.
+The Feedback screen contains the feeback form, consisting of two questions:
+
+1. What did the student do well?
+2. How can the student continue to improve?
 
 The lesson class notes, summary, transcript and recording (see [here](/lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback.
 
