--- a/lessons/leaving-feedback.mdx
+++ b/lessons/leaving-feedback.mdx
@@ -19,7 +19,7 @@ The Feedback screen contains the feeback form, consisting of two questions:
 1. What did the student do well?
 2. How can the student continue to improve?
 
-The lesson class notes, summary, transcript and recording (see [here](/lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback.
+The lesson summary, transcript, class notes, whiteboard and recording (see [here](/lessons/post-lesson-classroom) for more details) are also provided, which you can use as an aid when filling out your feedback.
 
 ![Give Feedback 3](/images/give-feedback-3.png)
 
