--- a/lessons/classroom.mdx
+++ b/lessons/classroom.mdx
@@ -106,7 +106,7 @@ Our class notes editor supports various keyboard shortcuts to help you write you
 
 ### Keyboard Shortcuts
 
-Our whiteboard supports various keyboard shortcuts to help you use it easily. Below is a list of the supported shortcuts:
+Our whiteboard includes a range of keyboard shortcuts designed to enhance usability and efficiency. Below is a list of the supported shortcuts:
 
 | Action                    | Shortcut              |
 |---------------------------|-------------          |
