--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -24,7 +24,7 @@ You can then select your calendar provider:
 
 ### Google
 
-If you use Google Calendar, you will be prompted to select the email address associated with the calendar you wish to connect:
+If you select Google, you will be prompted to select the email address associated with the calendar you wish to connect:
 
 ![Connect Google Calendar 1](/images/connect-google-calendar-1.png)
 
@@ -39,4 +39,6 @@ will automatically be added to your Google calendar.
 
 ### Outlook
 
-Coming soon!
+If you select Outlook, you will be asked to grant TutorOS permission to read/write events from the calendar of the Outlook email address that you are currently signed in with:
+
+![Connect Outlook Calendar 1](/images/connect-outlook-calendar-1.png)
