--- a/schedule/connect-calendar.mdx
+++ b/schedule/connect-calendar.mdx
@@ -42,3 +42,9 @@ will automatically be added to your Google calendar.
 If you select Outlook, you will be asked to grant TutorOS permission to read/write events from the calendar of the Outlook email address that you are currently signed in with:
 
 ![Connect Outlook Calendar 1](/images/connect-outlook-calendar-1.png)
+
+Click the `Accept` button to complete the process. Your Outlook calendar events will now be displayed inside your schedule in TutorOS, and future TutorOS lessons
+will automatically be added to your Outlook calendar.
+
+![Connect Outlook Calendar 2](/images/connect-outlook-calendar-2.png)
+
