--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -23,3 +23,11 @@ Additionally, you can invite students to your page by clicking the `Invite Stude
 Clicking your profile page link will open your profile, displaying your details along with the [lesson templates](/templates/lesson-template-intro) you have created in your account:
 
 ![Profile Page](/images/profile-page.png)
+
+### Embedding Profile Page on your Website
+
+If you already have a website where students currently book lessons, you can embed your profile page directly by using your `Embed Code`. 
+
+![Profile Page 2](/images/profile-page-4.png)
+
+This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for your existing booking form on your website.
