--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -8,7 +8,7 @@ icon: 'text-size'
 
 Your profile page serves as a unique landing page where students can view your details and book lessons with you. You can share the link to your profile directly with your students (via SMS, WhatsApp, etc.) or post it online wherever you promote your tutoring services.
 
-### Viewing & Sharing Profile Page
+### Viewing & Sharing Page
 
 To view your page, click the `My Link` link in the toolbar:
 
@@ -24,10 +24,53 @@ Clicking your profile page link will open your profile, displaying your details 
 
 ![Profile Page](/images/profile-page.png)
 
-### Embedding Profile Page on your Website
+### Embedding Page on your Website
 
 If you already have a website where students currently book lessons, you can embed your profile page directly by using your `Embed Code`. 
 
 ![Profile Page 2](/images/profile-page-4.png)
 
 This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for your existing booking form on your website.
+
+Below are instructions on how to embed your code in some of the most common website platforms. Each platform has its own interface and terminology, but the general idea is: add a custom HTML element (or code block) and paste in the iframe snippet.
+
+#### WordPress
+
+1. Log in to your WordPress dashboard and navigate to the page or post where you want to embed the code.
+2. Click the “+” icon to add a new block.
+3. Search for and select “Custom HTML”.
+4. Paste your iframe code into the Custom HTML block.
+5. Preview or update the page to confirm the embed displays correctly.
+
+#### Wix
+
+1. Log in to your Wix account and open your site in the Wix Editor.
+2. On the left side, click the “Add” (+)” button.
+3. From the menu, select “Embed” (or “Embed Code” or “Custom Embeds” depending on your Wix version).
+4. Choose “Custom Embeds” → “Embed a Widget” (Wix might name it slightly differently).
+5. A box will appear on your page. Click inside it to open the HTML settings panel.
+6. Paste your iframe code into the provided field.
+7. Resize or position the box if needed.
+8. Publish or save your changes.
+
+#### Squarespace
+
+1. Log in to Squarespace and navigate to the page or section where you want to embed the code.
+2. Click “Edit” on the page content area.
+3. Hover over where you want the iframe and click the “+” button to add a block.
+4. Select “Code” from the block options.
+5. In the code block editor, paste your iframe code.
+6. (Optional) Uncheck “Display source” if you only want the result, not the raw code, to appear.
+7. Click “Apply”, then save or publish your page.
+
+Note: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
+
+#### Webflow
+
+1. Open your project in the Webflow Designer.
+2. In the Elements panel (on the left), scroll down and find the “Embed” element.
+3. Drag and drop the Embed element into the desired location on your page’s layout.
+4. In the Embed settings popup, paste your iframe code into the code editor field.
+5. Click “Save & Close.”
+6. Adjust the sizing or positioning of the element as needed.
+7. Preview or publish your site to confirm the embed is displayed correctly.
