--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -4,11 +4,11 @@ description: 'Learn about your profile page.'
 icon: 'text-size'
 ---
 
-### Profile Page Introduction
+## Profile Page Introduction
 
 Your profile page serves as a unique landing page where students can view your details and book lessons with you. You can share the link to your profile directly with your students (via SMS, WhatsApp, etc.) or post it online wherever you promote your tutoring services.
 
-### Viewing & Sharing Page
+## Viewing & Sharing Page
 
 To view your page, click the `My Link` link in the toolbar:
 
@@ -24,7 +24,7 @@ Clicking your profile page link will open your profile, displaying your details 
 
 ![Profile Page](/images/profile-page.png)
 
-### Embedding Page on your Website
+## Embedding Page on your Website
 
 If you already have a website where students currently book lessons, you can embed your profile page directly by using your `Embed Code`. 
 
@@ -34,7 +34,7 @@ This allows you to seamlessly embed the your TutorOS profile page as a drop-in r
 
 Below are instructions on how to embed your code in some of the most common website platforms. Each platform has its own interface and terminology, but the general idea is: add a custom HTML element (or code block) and paste in the iframe snippet.
 
-#### WordPress
+### WordPress
 
 1. Log in to your WordPress dashboard and navigate to the page or post where you want to embed the code.
 2. Click the “+” icon to add a new block.
@@ -42,7 +42,7 @@ Below are instructions on how to embed your code in some of the most common webs
 4. Paste your iframe code into the Custom HTML block.
 5. Preview or update the page to confirm the embed displays correctly.
 
-#### Wix
+### Wix
 
 1. Log in to your Wix account and open your site in the Wix Editor.
 2. On the left side, click the “Add” (+)” button.
@@ -53,7 +53,7 @@ Below are instructions on how to embed your code in some of the most common webs
 7. Resize or position the box if needed.
 8. Publish or save your changes.
 
-#### Squarespace
+### Squarespace
 
 1. Log in to Squarespace and navigate to the page or section where you want to embed the code.
 2. Click “Edit” on the page content area.
@@ -65,7 +65,7 @@ Below are instructions on how to embed your code in some of the most common webs
 
 Note: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
 
-#### Webflow
+### Webflow
 
 1. Open your project in the Webflow Designer.
 2. In the Elements panel (on the left), scroll down and find the “Embed” element.
