--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -63,7 +63,7 @@ Below are instructions on how to embed your code in some of the most common webs
 6. (Optional) Uncheck “Display source” if you only want the result, not the raw code, to appear.
 7. Click “Apply”, then save or publish your page.
 
-Note: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
+**Note**: Some Squarespace plans or versions limit certain code injections. If you can’t see the Code Block option, verify your subscription level or check the Squarespace documentation.
 
 ### Webflow
 
