--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -32,7 +32,7 @@ If you already have a website where students currently book lessons, you can emb
 
 This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for your existing booking form on your website.
 
-Below are instructions on how to embed your code in some of the most common website platforms. Each platform has its own interface and terminology, but the general idea is: add a custom HTML element (or code block) and paste in the iframe snippet.
+Below are instructions on how to embed your code in some of the most common website platforms:
 
 ### WordPress
 
