--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -22,15 +22,33 @@ Additionally, you can invite students to your page by clicking the `Invite Stude
 
 Clicking your profile page link will open your profile, displaying your details along with the [lesson templates](/templates/lesson-template-intro) you have created in your account:
 
-![Profile Page](/images/profile-page.png)
+![Profile Page 3](/images/profile-page.png)
 
 ## Embedding Page on your Website
 
 If you already have a website where students currently book lessons, you can embed your profile page directly by using your `Embed Code`. 
 
-![Profile Page 2](/images/profile-page-4.png)
+![Profile Page 4](/images/profile-page-4.png)
 
 This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for your existing booking form on your website.
+
+If you feel that displaying your profile info (image, name and bio) on your page is redundant, you can use the `hideProfile` query parameter to display only your lesson templates on your page:
+
+![Profile Page 5](/images/profile-page-5.png)
+
+The `hideProfile` query param must be added to the `src` attribute in your embed code. So, for example, if your `Link URL` is `https://platform.tutoros.app/amyjones`, then your embed code should be changed to:
+
+```javascript
+<iframe
+  src="https://platform.tutoros.app/amyjones?hideProfile=true"
+  width="100%"
+  height="100%"
+  style="border:none; overflow:hidden;"
+  scrolling="yes"
+  allowfullscreen
+  loading="lazy">
+</iframe>
+```
 
 Below are instructions on how to embed your code in some of the most common website platforms:
 
