--- a/profile/profile-page.mdx
+++ b/profile/profile-page.mdx
@@ -30,7 +30,7 @@ If you already have a website where students currently book lessons, you can emb
 
 ![Profile Page 4](/images/profile-page-4.png)
 
-This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for your existing booking form on your website.
+This allows you to seamlessly embed the your TutorOS profile page as a drop-in replacement for the existing booking form on your website.
 
 If you feel that displaying your profile info (image, name and bio) on your page is redundant, you can use the `hideProfile` query parameter to display only your lesson templates on your page:
 
